--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-bootstrap-v5": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.38.0",
