--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "react-swipeable": "^6.2.0",
     "react-tsparticles": "^1.38.0",
     "web-vitals": "^1.1.2"
   },
